carousel finishing touch

--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Comedy, Breakdown.
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Comedy, Breakdown.
                                 Breakthrough.</p>
                         </div>
                         <div class="carousel-item position-relative">
@@ -481,7 +482,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Comedy, 4 Emmy® wins
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Comedy, 4 Emmy® wins
                                 including
                                 Outstanding Comedy.</p>
                         </div>
@@ -490,7 +492,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Comedy, 4 Emmy® wins
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Comedy, 4 Emmy® wins
                                 including
                                 Outstanding Comedy.</p>
                         </div>
@@ -499,7 +502,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Drama.Connie Britton stars
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Drama.Connie Britton stars
                                 in a new series from the <br> producer of Friday Night Lights.</p>
 
                         </div>
@@ -508,7 +512,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Drama.Connie Britton stars
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Drama.Connie Britton stars
                                 in a new series from the <br> producer of Friday Night Lights.</p>
                         </div>
                         <div class="carousel-item">
@@ -516,7 +521,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Drama.Connie Britton stars
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Drama.Connie Britton stars
                                 in a new series from the <br> producer of Friday Night Lights.</p>
                         </div>
                         <div class="carousel-item">
@@ -524,7 +530,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Thriller. The very bottom of
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Thriller. The very bottom of
                                 top secret.</p>
 
                         </div>
@@ -533,7 +540,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Drama.Connie Britton stars
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Drama.Connie Britton stars
                                 in a new series from the <br> producer of Friday Night Lights.</p>
                         </div>
                         <div class="carousel-item">
@@ -541,7 +549,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Drama. One man’s freedom
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Drama. One man’s freedom
                                 hides in another man’s darkness.</p>
 
                         </div>
@@ -550,7 +559,8 @@
                             <button
                                 class="btn btn-light rounded-pill  position-absolute customLocation fs-6 fw-bold">Stream
                                 now <i class="bi bi-play-circle-fill"></i></button>
-                            <p class="position-absolute fw-bold text-white customLocation2">Comedy, Breakdown.
+                            <p class="position-absolute fw-bold text-white customLocation2 d-none d-md-inline-block">
+                                Comedy, Breakdown.
                                 Breakthrough.</p>
                         </div>
                     </div>
